<resources>
    <string name="app_name">Stretch It</string>
    <string name="action_settings">Settings</string>
    <string name="routines">Routines</string>
    <string name="get_started">Get started</string>
    <string name="get_started_button">Get started</string>
    <string name="new_routine">New Routine</string>
    <string name="routineName">Routine name</string>
    <string name="statistics">View statistics</string>
    <string name="next">Next</string>
    <string name="activity_add_exercises_title">Manage exercises</string>
    <string name="exercise_name_hint">Exercise name</string>
    <string name="countdown_choice">Countdown</string>
    <string name="exercise_choice">Exercise</string>
    <string name="rest_choice">Rest</string>
    <string name="category_of_activity">Category:</string>
    <string name="exercise_name">Exercise name:</string>
    <string name="duration">Duration:</string>
    <string name="double_zero_hint">00</string>
    <string name="h">h</string>
    <string name="min">min</string>
    <string name="s">s</string>
    <string name="done">Done</string>
    <string name="routines_times_used">Times used:</string>
    <string name="activity_exercises_title">Add exercise</string>
    <string name="dot">\u2022</string>
    <string name="activity_start_timer">Start timer</string>
    <string name="timer_back_dialog_msg">Pressing back will result in all progress lost. Continue?</string>
    <string name="timer_continue">Continue</string>
    <string name="timer_cancel">Cancel</string>
    <string name="timer_finished_dialog">Routine finished! Click done to go back.</string>
</resources>
