<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="me.kevinxchan.kevinxchan.stretchit.ExerciseActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="344dp"
            android:layout_height="495dp"
            android:id="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginEnd="16dp">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/exercise_name"
                  android:textSize="18sp"
                  android:layout_marginBottom="18sp"/>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exerciseName"
                    android:hint="@string/exercise_name_hint" android:inputType="textShortMessage"
                    android:layout_marginBottom="24sp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/category_of_activity"
                  android:textSize="18sp"
                  android:layout_marginBottom="18sp"/>

        <com.aigestudio.wheelpicker.WheelPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:wheel_visible_item_count="2"
                app:wheel_curved="true"
                app:wheel_selected_item_text_color="@color/colorPrimaryDark"
                android:id="@+id/exerciseCategoryWheelPicker"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/duration"
                  android:textSize="18sp"
                  android:layout_marginBottom="18sp"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="24sp"
                      android:orientation="horizontal"
                      android:gravity="center">

            <com.aigestudio.wheelpicker.WheelPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:wheel_curved="true"
                    app:wheel_selected_item_text_color="@color/colorPrimaryDark"
                    app:wheel_visible_item_count="3"
                    android:id="@+id/hoursWheelPicker"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/h"
                      android:paddingStart="5dp"
                      android:paddingEnd="5dp"
                      android:textSize="24sp"/>

            <com.aigestudio.wheelpicker.WheelPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:wheel_curved="true"
                    app:wheel_visible_item_count="3"
                    app:wheel_selected_item_text_color="@color/colorPrimaryDark"
                    android:id="@+id/minutesWheelPicker"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/min"
                      android:paddingStart="5dp"
                      android:paddingEnd="5dp"
                      android:textSize="24sp"/>

            <com.aigestudio.wheelpicker.WheelPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:wheel_curved="true"
                    app:wheel_visible_item_count="3"
                    app:wheel_selected_item_text_color="@color/colorPrimaryDark"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/secondsWheelPicker"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/s"
                      android:textSize="24sp"
                      android:paddingStart="5dp"
                      android:paddingEnd="5dp"/>
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:id="@+id/doneFab"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_done_white"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
